--- a/helloworld.ipynb
+++ b/helloworld.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,7 @@
     "plt.plot(signal_l1.sample_times, signal_l1, label='L1')\n",
     "plt.plot(signal_v1.sample_times, signal_v1, label='V1')\n",
     "\n",
+    "plt.title(\"Gravitational Waveform from Binary Black Hole Merger\")\n",
     "plt.ylabel('Strain')\n",
     "plt.xlabel('Time (s)')\n",
     "plt.legend()\n",
