--- a/normalizing_flow_pytorch.ipynb
+++ b/normalizing_flow_pytorch.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -426,46 +426,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================================================================\n",
-      "TRAINING THE NORMALIZING FLOW\n",
-      "======================================================================\n",
-      "\n",
-      "Model parameters: 274,464\n",
-      "Number of layers: 8\n",
-      "Training samples: 5000\n",
-      "Batch size: 256\n",
-      "Epochs: 100\n",
-      "\n",
-      "The flow is learning to:\n",
-      "  1. Map data space (x) BACK to latent space (z)\n",
-      "  2. Ensure that z looks like a standard Gaussian\n",
-      "  3. This automatically makes forward mapping (z→x) work!\n",
-      "\n",
-      "Epoch 10/100, Loss: 2.3103\n",
-      "Epoch 20/100, Loss: 2.2550\n",
-      "Epoch 30/100, Loss: 2.2651\n",
-      "Epoch 40/100, Loss: 2.2398\n",
-      "Epoch 50/100, Loss: 2.2273\n",
-      "Epoch 60/100, Loss: 2.2660\n",
-      "Epoch 70/100, Loss: 2.2115\n",
-      "Epoch 80/100, Loss: 2.2327\n",
-      "Epoch 90/100, Loss: 2.1948\n",
-      "Epoch 100/100, Loss: 2.2251\n",
-      "\n",
-      "✓ Training complete!\n",
-      "  Initial loss: 5.6411\n",
-      "  Final loss:   2.2251\n",
-      "  Improvement:  3.4160\n",
-      "\n",
-      "======================================================================\n"
+     "ename": "AttributeError",
+     "evalue": "'CouplingLayer' object has no attribute 'mask'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Initialize flow\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m flow = \u001b[43mNormalizingFlow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdim\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_layers\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_dim\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m128\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m flow = flow.to(device)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Optimizer\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 20\u001b[39m, in \u001b[36mNormalizingFlow.__init__\u001b[39m\u001b[34m(self, dim, n_layers, hidden_dim)\u001b[39m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Alternate mask every other layer\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m i % \u001b[32m2\u001b[39m == \u001b[32m1\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     layer.mask = \u001b[32m1\u001b[39m - \u001b[43mlayer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmask\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;28mself\u001b[39m.layers.append(layer)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib64/python3.11/site-packages/torch/nn/modules/module.py:1964\u001b[39m, in \u001b[36mModule.__getattr__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   1962\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[32m   1963\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[32m-> \u001b[39m\u001b[32m1964\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[32m   1965\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m object has no attribute \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1966\u001b[39m )\n",
+      "\u001b[31mAttributeError\u001b[39m: 'CouplingLayer' object has no attribute 'mask'"
      ]
     }
    ],
@@ -547,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
