--- a/dingo_style_npe.ipynb
+++ b/dingo_style_npe.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6c4ced7a",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
     "        \n",
     "        # Compute log probability under base distribution\n",
     "        log_prob_base = -0.5 * (torch.log(2 * np.pi * self.base_std**2) + \n",
-    "                                 ((z - self.base_mean) / self.base_std)**2)\n",
+    "                                 ((z - self.base_mean) / self.base_std)**2) #Can this not be done with pytroch multivariate normal\n",
     "        log_prob_base = log_prob_base.sum(dim=1)\n",
     "        \n",
     "        # Apply change of variables\n",
