--- a/NPE.ipynb
+++ b/NPE.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "id": "0605072b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "id": "aeeef7d0",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "1019b123",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "id": "75bdd9d5",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "32ae2a52",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "id": "d9374d2a",
    "metadata": {},
    "outputs": [
@@ -306,26 +306,16 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10/100, Loss: 2.1133\n",
-      "Epoch 20/100, Loss: 2.1146\n",
-      "Epoch 30/100, Loss: 2.1082\n",
-      "Epoch 40/100, Loss: 2.1094\n",
-      "Epoch 50/100, Loss: 2.1090\n",
-      "Epoch 60/100, Loss: 2.1095\n",
-      "Epoch 70/100, Loss: 2.1096\n",
-      "Epoch 80/100, Loss: 2.1079\n",
-      "Epoch 90/100, Loss: 2.1116\n",
-      "Epoch 100/100, Loss: 2.1070\n",
-      "\n",
-      "✓ Training complete!\n",
-      "  Initial loss: 2.8638\n",
-      "  Final loss:   2.1070\n",
-      "  Improvement:  0.7568\n",
-      "\n",
-      "======================================================================\n"
+     "ename": "AttributeError",
+     "evalue": "'NormalizingFlow' object has no attribute 'inverse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 39\u001b[39m\n\u001b[32m     36\u001b[39m batch = train_data_shuffled[i:i+batch_size].to(device)\n\u001b[32m     38\u001b[39m \u001b[38;5;66;03m# Compute negative log likelihood\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m log_prob = \u001b[43mflow\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlog_prob\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     40\u001b[39m loss = -log_prob.mean()  \u001b[38;5;66;03m# Maximize log prob = minimize negative log prob\u001b[39;00m\n\u001b[32m     42\u001b[39m \u001b[38;5;66;03m# Backprop\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 67\u001b[39m, in \u001b[36mNormalizingFlow.log_prob\u001b[39m\u001b[34m(self, x)\u001b[39m\n\u001b[32m     63\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mlog_prob\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[32m     64\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     65\u001b[39m \u001b[33;03m    Compute log probability of x under the flow.\u001b[39;00m\n\u001b[32m     66\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m67\u001b[39m     z, log_det = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minverse\u001b[49m(x)\n\u001b[32m     68\u001b[39m     base_dist = MultivariateNormal(\u001b[38;5;28mself\u001b[39m.base_mean, \u001b[38;5;28mself\u001b[39m.base_cov)\n\u001b[32m     69\u001b[39m     log_prob_base = base_dist.log_prob(z)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib64/python3.11/site-packages/torch/nn/modules/module.py:1964\u001b[39m, in \u001b[36mModule.__getattr__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   1962\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[32m   1963\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[32m-> \u001b[39m\u001b[32m1964\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[32m   1965\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m object has no attribute \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1966\u001b[39m )\n",
+      "\u001b[31mAttributeError\u001b[39m: 'NormalizingFlow' object has no attribute 'inverse'"
      ]
     }
    ],
@@ -405,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "ee17be77",
    "metadata": {},
    "outputs": [
@@ -579,8 +569,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
